# Getriebesynthese-Cairo

./: .gitignore  CMakeLists.txt  HOW-TO-BUILD.md  README.md
include/: CMakeLists.txt  canvas.h  getrgeomath.h  grundpunkt.h  te.h
source/: CMakeLists.txt  canvas.cpp  compile.sh  getrgeomath.cpp  main.cpp
templates/: 3LagenSynthese.tmpl
